force-app/main/default/objects/Provider_Participant_Form__c/Provider_Participant_Form__c.object-meta.xml
<CustomObject>
    <label>Provider Participant Form</label>
    <nameField>
        <displayFormat>PPF-{0000}</displayFormat>
        <label>PPF Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Participant Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>