force-app/main/default/objects/Provider_Participant_Form__c/fields/Average_Number_Of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Average_Number_Of_Hours__c</fullName>
    <inlineHelpText>Average Number Of Hours Worked Per Week?</inlineHelpText>
    <label>Average # of Hours per week</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>