force-app/main/default/objects/Provider_Participant_Form__c/fields/Choice_of_Class_Language_Other__c.field-meta.xml
<CustomField>
    <fullName>Choice_of_Class_Language_Other__c</fullName>
    <inlineHelpText>Choice of Class Language (If &apos;Other&apos; selected above)</inlineHelpText>
    <label>Choice of Class Language (Other)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Akan</fullName>
            </value>
            <value>
                <fullName>Amharic</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Assamese</fullName>
            </value>
            <value>
                <fullName>Awadhi</fullName>
            </value>
            <value>
                <fullName>Azerbaijani</fullName>
            </value>
            <value>
                <fullName>Balochi</fullName>
            </value>
            <value>
                <fullName>Belarusian</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Bhojpuri</fullName>
            </value>
            <value>
                <fullName>Burmese</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Cebuano (Visayan)</fullName>
            </value>
            <value>
                <fullName>Chewa</fullName>
            </value>
            <value>
                <fullName>Chhattisgarhi</fullName>
            </value>
            <value>
                <fullName>Chittagonian</fullName>
            </value>
            <value>
                <fullName>Czech</fullName>
            </value>
            <value>
                <fullName>Deccan</fullName>
            </value>
            <value>
                <fullName>Dhundhari</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Farsi</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Fula</fullName>
            </value>
            <value>
                <fullName>Gan</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>Gujarati</fullName>
            </value>
            <value>
                <fullName>Haitian Creole</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>