force-app/main/default/objects/Provider_Participant_Form__c/fields/Comfortable_with_Zoom_classes__c.field-meta.xml
<CustomField>
    <fullName>Comfortable_with_Zoom_classes__c</fullName>
    <inlineHelpText>Do you feel comfortable with the online platform Zoom to take a class online?</inlineHelpText>
    <label>Comfortable with Zoom Classes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>