force-app/main/default/objects/Provider_Participant_Form__c/fields/Devices_accessible__c.field-meta.xml
<CustomField>
    <fullName>Devices_accessible__c</fullName>
    <inlineHelpText>Do you have access to technology?</inlineHelpText>
    <label>Devices accessible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smartphone</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>