force-app/main/default/objects/Provider_Participant_Form__c/fields/Do_you_speak_English__c.field-meta.xml
<CustomField>
    <fullName>Do_you_speak_English__c</fullName>
    <label>Do you speak English?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>