force-app/main/default/objects/Provider_Participant_Form__c/fields/Ethnicity_Other__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_Other__c</fullName>
    <inlineHelpText>If &apos;Other Ethnicity&apos;, please indicate your Ethnicity</inlineHelpText>
    <label>Ethnicity (Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>