force-app/main/default/objects/Provider_Participant_Form__c/fields/Form_link__c.field-meta.xml
<CustomField>
    <fullName>Form_link__c</fullName>
    <label>Form link</label>
    <type>TextArea</type>
</CustomField>