force-app/main/default/objects/Provider_Participant_Form__c/fields/Form_Response_Link__c.field-meta.xml
<CustomField>
    <fullName>Form_Response_Link__c</fullName>
    <label>Form Response Link</label>
    <type>TextArea</type>
</CustomField>