force-app/main/default/objects/Provider_Participant_Form__c/fields/How_did_you_find_us_if_other__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_find_us_if_other__c</fullName>
    <inlineHelpText>How did you find out about us (if other)?</inlineHelpText>
    <label>How did you find about us? (If Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>