force-app/main/default/objects/Provider_Participant_Form__c/fields/Internet_access__c.field-meta.xml
<CustomField>
    <fullName>Internet_access__c</fullName>
    <inlineHelpText>Do you have access to the internet and/or Wifi to take an online course?</inlineHelpText>
    <label>Internet Access to take online classes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>