force-app/main/default/objects/Provider_Participant_Form__c/fields/Other_foreign_language__c.field-meta.xml
<CustomField>
    <fullName>Other_foreign_language__c</fullName>
    <inlineHelpText>Do you speak a language other than English?</inlineHelpText>
    <label>Any Foreign languages known</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>