force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Address__c.field-meta.xml
<CustomField>
    <fullName>PPF_Address__c</fullName>
    <label>Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>