force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Apt_Floor__c.field-meta.xml
<CustomField>
    <fullName>PPF_Apt_Floor__c</fullName>
    <label>Apt/Floor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>