force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Best_way_to_reach_you__c.field-meta.xml
<CustomField>
    <fullName>PPF_Best_way_to_reach_you__c</fullName>
    <label>Best way to reach you?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calling your home phone</fullName>
            </value>
            <value>
                <fullName>Calling your cell phone</fullName>
            </value>
            <value>
                <fullName>Texting your cell phone</fullName>
            </value>
            <value>
                <fullName>Emailing you</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>