force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Can_We_Text_You__c.field-meta.xml
<CustomField>
    <fullName>PPF_Can_We_Text_You__c</fullName>
    <label>Can We Text You?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>