force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Choice_of_Class_Language__c.field-meta.xml
<CustomField>
    <fullName>PPF_Choice_of_Class_Language__c</fullName>
    <label>Choice of Class Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>