force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_City__c.field-meta.xml
<CustomField>
    <fullName>PPF_City__c</fullName>
    <label>City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>