force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Classes_Desired__c.field-meta.xml
<CustomField>
    <fullName>PPF_Classes_Desired__c</fullName>
    <label>Classes Desired</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CNA (Certified Nurse Assistant)</fullName>
            </value>
            <value>
                <fullName>Dementia Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>