force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>PPF_Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>