force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Email__c.field-meta.xml
<CustomField>
    <fullName>PPF_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>