force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Highest_Educational_Level__c.field-meta.xml
<CustomField>
    <fullName>PPF_Highest_Educational_Level__c</fullName>
    <label>Highest Educational Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eigth Grade or Less</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>College Graduate</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
            <value>
                <fullName>Some High School</fullName>
            </value>
            <value>
                <fullName>Some College</fullName>
            </value>
            <value>
                <fullName>Post-College Graduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>