force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_How_often__c.field-meta.xml
<CustomField>
    <fullName>PPF_How_often__c</fullName>
    <label>How often?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>