force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_If_yes_what_language_s__c.field-meta.xml
<CustomField>
    <fullName>PPF_If_yes_what_language_s__c</fullName>
    <label>If yes, what language(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Akan</fullName>
            </value>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Assamese</fullName>
            </value>
            <value>
                <fullName>Azerbaijani</fullName>
            </value>
            <value>
                <fullName>Belarusian</fullName>
            </value>
            <value>
                <fullName>Bhojpuri</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Chewa</fullName>
            </value>
            <value>
                <fullName>Chittagonian</fullName>
            </value>
            <value>
                <fullName>Deccan</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>Farsi</fullName>
            </value>
            <value>
                <fullName>Fula</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Gujarati</fullName>
            </value>
            <value>
                <fullName>Hakka</fullName>
            </value>
            <value>
                <fullName>Hausa</fullName>
            </value>
            <value>
                <fullName>Hmong</fullName>
            </value>
            <value>
                <fullName>Igbo</fullName>
            </value>
            <value>
                <fullName>Indonesian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Jin</fullName>
            </value>
            <value>
                <fullName>Kazakh</fullName>
            </value>
            <value>
                <fullName>Kinyarwanda</fullName>
            </value>
            <value>
                <fullName>Konkani</fullName>
            </value>
            <value>
                <fullName>Kurdish</fullName>
            </value>
            <value>
                <fullName>Magahi</fullName>
            </value>
            <value>
                <fullName>Malagasy</fullName>
            </value>
            <value>
                <fullName>Malaysian</fullName>
            </value>
            <value>
                <fullName>Marathi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>