force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>PPF_Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>