force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Other_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>PPF_Other_Company_Name__c</fullName>
    <label>Other/Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>