force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>PPF_Other_Phone__c</fullName>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>