force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Preferred_Class_Schedule_Day__c.field-meta.xml
<CustomField>
    <fullName>PPF_Preferred_Class_Schedule_Day__c</fullName>
    <label>Preferred Class Schedule Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekday</fullName>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>