force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Preferred_Class_Time__c.field-meta.xml
<CustomField>
    <fullName>PPF_Preferred_Class_Time__c</fullName>
    <label>Preferred Class Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>