force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>PPF_Primary_Phone__c</fullName>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>