force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Staff_Only_Notes__c.field-meta.xml
<CustomField>
    <fullName>PPF_Staff_Only_Notes__c</fullName>
    <label>Staff Only Notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>