force-app/main/default/objects/Provider_Participant_Form__c/fields/PPF_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>PPF_Work_Phone__c</fullName>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>